Refactor: Update configuration file handling in Docker and main application
Changes:
- In `docker-compose.yml`, replace hardcoded config file path with an environment variable option for flexibility.
- In `main.go`, enhance config file loading logic to prioritize environment variable over command line arguments, improving configurability.

This allows for more dynamic configuration management in different environments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
     ports:
       - "${NOFX_BACKEND_PORT:-8080}:8080"
     volumes:
-      - ./config.json:/app/config.json:ro
+      - ${CONFIG_FILE:-./config.json}:/app/config.json:ro
       - ./decision_logs:/app/decision_logs
       - /etc/localtime:/etc/localtime:ro  # Sync host time
     environment:
       - TZ=${NOFX_TIMEZONE:-Asia/Shanghai}  # Set timezone
+      - CONFIG_FILE=${CONFIG_FILE:-config.json}  # Config file path
     networks:
       - nofx-network
     healthcheck:
