新增内置AI评分 修改market/data.go Get函数获取K线为流式获取(可以解决传入币种比较多的情况下耗时问题) market目录下新增文件 main.go 新增运行入口 通过inside_coins=true控制 该评分默认初始化大约需要2分钟左右(因为币种列表比较多，api有限速) 使用时应该注意engine.go下的流动性过滤问题

--- a/config.json.example
+++ b/config.json.example
@@ -5,6 +5,7 @@
     "altcoin_leverage": 5
   },
   "use_default_coins": true,
+  "inside_coins": true,
   "default_coins": [
     "BTCUSDT",
     "ETHUSDT",
