--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -166,9 +166,9 @@ jobs:
               console.log('Fork PR detected - skipping label/comment (will be handled by pr-checks-comment.yml)');
             }
 
-  # Backend tests
-  backend-tests:
-    name: Backend Tests (Go)
+  # Backend checks (simplified - no TA-Lib required)
+  backend-checks:
+    name: Backend Code Quality (Go)
     runs-on: ubuntu-latest
     permissions:
       contents: read      # Only need read access for testing
@@ -180,37 +180,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.21'
-
-      - name: Cache TA-Lib
-        id: cache-talib
-        uses: actions/cache@v4
-        with:
-          path: ~/ta-lib
-          key: ${{ runner.os }}-talib-0.4.0
-
-      - name: Install TA-Lib dependencies
-        if: steps.cache-talib.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget build-essential
-
-      - name: Build and Install TA-Lib
-        if: steps.cache-talib.outputs.cache-hit != 'true'
-        run: |
-          cd ~
-          wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
-          tar -xzf ta-lib-0.4.0-src.tar.gz
-          cd ta-lib/
-          ./configure --prefix=$HOME/ta-lib
-          make
-          make install
-
-      - name: Set TA-Lib environment variables
-        run: |
-          echo "LD_LIBRARY_PATH=$HOME/ta-lib/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-          echo "LIBRARY_PATH=$HOME/ta-lib/lib:$LIBRARY_PATH" >> $GITHUB_ENV
-          echo "CPATH=$HOME/ta-lib/include:$CPATH" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=$HOME/ta-lib/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -234,17 +203,8 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
-      - name: Run tests
-        run: go test -v -race -coverprofile=coverage.out ./...
-
       - name: Build
         run: go build -v -o nofx
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.out
-          flags: backend
 
   # Frontend tests
   frontend-tests:
@@ -273,17 +233,10 @@ jobs:
         working-directory: ./web
         run: npm ci
 
-      - name: Run linter
-        working-directory: ./web
-        run: npm run lint
-
-      - name: Run type check
-        working-directory: ./web
-        run: npm run type-check || true  # Don't fail on type errors for now
-
-      - name: Build
+      - name: Build and Type Check
         working-directory: ./web
         run: npm run build
+        # Note: build script runs "tsc && vite build" which includes type checking
 
   # Auto-label based on files changed
   auto-label:
@@ -350,7 +303,7 @@ jobs:
   all-checks:
     name: All Checks Passed
     runs-on: ubuntu-latest
-    needs: [validate-pr, backend-tests, frontend-tests, security-check, secrets-check]
+    needs: [validate-pr, backend-checks, frontend-tests, security-check, secrets-check]
     if: always()
     permissions:
       contents: read      # Only need read access for status checking
@@ -360,13 +313,13 @@ jobs:
           # Note: validate-pr uses continue-on-error, so it won't block even if title format is invalid
           # We only care about actual test failures
           echo "validate-pr: ${{ needs.validate-pr.result }}"
-          echo "backend-tests: ${{ needs.backend-tests.result }}"
+          echo "backend-checks: ${{ needs.backend-checks.result }}"
           echo "frontend-tests: ${{ needs.frontend-tests.result }}"
           echo "security-check: ${{ needs.security-check.result }}"
           echo "secrets-check: ${{ needs.secrets-check.result }}"
 
           # Check if any critical checks failed (excluding validate-pr which is advisory)
-          if [[ "${{ needs.backend-tests.result }}" == "failure" ]] || \
+          if [[ "${{ needs.backend-checks.result }}" == "failure" ]] || \
              [[ "${{ needs.frontend-tests.result }}" == "failure" ]] || \
              [[ "${{ needs.security-check.result }}" == "failure" ]] || \
              [[ "${{ needs.secrets-check.result }}" == "failure" ]]; then
