--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,8 +17,8 @@ services:
     ports:
       - "${NOFX_BACKEND_PORT:-8080}:8080"
     volumes:
-      - nofx-data:/app/data
-      - nofx-logs:/app/decision_logs
+      - ./data:/app/data
+      - ./decision_logs:/app/decision_logs
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
@@ -54,9 +54,3 @@ services:
 networks:
   nofx-network:
     driver: bridge
-
-volumes:
-  nofx-data:
-    name: nofx-data
-  nofx-logs:
-    name: nofx-logs
