--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,6 +17,7 @@ services:
     ports:
       - "${NOFX_BACKEND_PORT:-8080}:8080"
     volumes:
+      # Data directory for database (new images use data/data.db)
       - ./data:/app/data
       - ./decision_logs:/app/decision_logs
       - /etc/localtime:/etc/localtime:ro
