--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,13 @@ services:
     ports:
       - "${NOFX_BACKEND_PORT:-8080}:8080"
     volumes:
-      - ./config.json:/app/config.json:ro
       - ./data:/app/data
-      - ./beta_codes.txt:/app/beta_codes.txt:ro
-      - ./prompts:/app/prompts
-      - /etc/localtime:/etc/localtime:ro  # Sync host time
+      - /etc/localtime:/etc/localtime:ro
+    env_file:
+      - .env
     environment:
-      - TZ=${NOFX_TIMEZONE:-Asia/Shanghai}  # Set timezone
-      - AI_MAX_TOKENS=4000  # AI响应的最大token数（默认2000，建议4000-8000）
-      - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}  # 数据库加密密钥
-      - JWT_SECRET=${JWT_SECRET}  # JWT认证密钥
-      - RSA_PRIVATE_KEY=${RSA_PRIVATE_KEY}  # RSA私钥（客户端加密）
+      - TZ=${TZ:-Asia/Shanghai}
+      - AI_MAX_TOKENS=8000
     networks:
       - nofx-network
     healthcheck:
