--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -21,7 +21,7 @@
 # 这些用户将被请求审查所有 PR
 # =============================================================================
 
-* @tinkle-community @hzb1115 @tangmengqiu @mykelio1001  @Icyoung @SkywalkerJi
+* @NoFxAiOS @hzb1115 @tangmengqiu @mykelio1001 @Icyoung @SkywalkerJi
 
 # =============================================================================
 # Specific Component Owners | 特定组件所有者
