--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     stop_grace_period: 30s  # 允许应用有 30 秒时间优雅关闭
     ports:
       - "${NOFX_BACKEND_PORT:-8080}:8080"
+      - "6060:6060"  # pprof profiling
     volumes:
       - ./data:/app/data
       - /etc/localtime:/etc/localtime:ro
