fix: convert branch name for docker manifest tags

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -153,12 +153,14 @@ jobs:
         env:
           IMAGE_BASE: ${{ needs.prepare.outputs.image_base }}
         run: |
-          REF_NAME="${{ github.ref_name }}"
+          # Convert branch name: release/stable -> release-stable (matching Docker metadata action)
+          REF_NAME=$(echo "${{ github.ref_name }}" | sed 's/\//-/g')
           GHCR_IMAGE="${{ env.REGISTRY_GHCR }}/${IMAGE_BASE}/nofx-${{ matrix.image_suffix }}"
 
           echo "📦 Creating manifest for ${{ matrix.image_suffix }}"
           echo "Repository: ${IMAGE_BASE}"
           echo "Image: ${GHCR_IMAGE}"
+          echo "Ref name: ${REF_NAME}"
 
           docker buildx imagetools create -t "${GHCR_IMAGE}:${REF_NAME}" \
             "${GHCR_IMAGE}:${REF_NAME}-amd64" \
