--- a/railway/supervisord.conf
+++ b/railway/supervisord.conf
@@ -5,7 +5,7 @@ logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
 [program:backend]
-command=/app/nofx
+command=/app/start-backend.sh
 directory=/app
 autostart=true
 autorestart=true
