--- a/railway/nginx.conf.template
+++ b/railway/nginx.conf.template
@@ -2,7 +2,7 @@
 # Frontend static files + API proxy to backend
 
 server {
-    listen 8080;
+    listen ${PORT};
     server_name _;
 
     root /usr/share/nginx/html;
