--- a/railway/supervisord.conf
+++ b/railway/supervisord.conf
@@ -16,7 +16,7 @@ stderr_logfile_maxbytes=0
 environment=API_SERVER_PORT="8081",DB_PATH="/app/data/data.db"
 
 [program:nginx]
-command=nginx -g "daemon off;"
+command=/app/start-nginx.sh
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
