--- a/railway/supervisord.conf
+++ b/railway/supervisord.conf
@@ -23,3 +23,4 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+environment=PORT="%(ENV_PORT)s"
