--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -33,11 +33,11 @@ COPY railway/start.sh /app/start.sh
 RUN chmod +x /app/start.sh
 
 ENV DB_PATH=/app/data/data.db
-ENV PORT=3000
 
-EXPOSE 3000
+# Railway 会自动设置 PORT 环境变量
+EXPOSE 8080
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-3000}/health || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8080}/health || exit 1
 
 CMD ["/app/start.sh"]
