--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -5,6 +5,8 @@ on:
     # Run daily at 00:00 UTC
     - cron: '0 0 * * *'
   workflow_dispatch: # Allow manual trigger
+  sponsorship:
+    types: [created, cancelled, edited, tier_changed, pending_cancellation, pending_tier_change]
 
 jobs:
   sponsors:
